@@ -7,6 +7,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- hmac_md5.c: include <strings.h> for bzero and bcopy declarations.
 	- configure.in: fix checks to limit enable-valias to MySQL only.
 	- INSTALL: make clear that valias only applies to MySQL backend.
+	- vpopmail.c: modify get_remote_ip() to work with xinetd, not
+	  just tcpserver from daemontools.
 
 5.4.12 - released 4-Jul-05
 
